--- a/mern/server/package.json
+++ b/mern/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bson": "^6.8.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
